# gello-ur5-lerobo

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
config/: ur5_gello.example.yaml
lerobot_plugins/: README.md
lerobot_plugins/lerobot_robot_ur5_gello/: pyproject.toml
lerobot_plugins/lerobot_robot_ur5_gello/lerobot_robot_ur5_gello/: __init__.py  config_ur5_gello.py  ur5_gello.py
lerobot_plugins/lerobot_teleoperator_my_gello/: pyproject.toml
lerobot_plugins/lerobot_teleoperator_my_gello/lerobot_teleoperator_my_gello/: __init__.py  config_my_gello.py  my_gello.py
scripts/: calibrate_offsets.py  run_teleop.py
teleop/core/: config_loader.py  lerobot_helpers.py  startup_alignment.py  teleop_loop.py
teleop/follower/: robotiq_gripper.py  ur5_rtde_follower.py
teleop/leader/: dynamixel_sdk_driver.py  gello_leader.py
teleop/safety/: safety_checker.py
