[project]
name = "lerobot_robot_ur5_gello"
version = "0.1.0"
description = "LeRobot robot plugin for the UR5 + Robotiq follower in my_teleop"
requires-python = ">=3.11,<3.13"
dependencies = [
    "lerobot",
    "my-teleop",
    "numpy",
    "omegaconf==2.3.0",
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
