[project]
name = "lerobot_teleoperator_my_gello"
version = "0.1.0"
description = "LeRobot teleoperator plugin for the GELLO leader in my_teleop"
requires-python = ">=3.11,<3.13"
dependencies = [
    "lerobot",
    "my-teleop",
    "numpy",
    "omegaconf==2.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
